r1776/sofa-dev : FIX: includes in main documentation

--- a/sofaDocumentation/sofadocumentation.tex
+++ b/sofaDocumentation/sofadocumentation.tex
@@ -1,5 +1,5 @@
 \documentclass[a4paper,10pt]{report}
-\input{macros_docu} % Customizations 
+\input{../macros_docu} % Customizations 
 
 % ---- format de page A4
 	\setlength{\textwidth }{16cm}	% largeur de ligne
@@ -25,17 +25,17 @@ This is the Sofa documentation
 
 % This chapter is borrowed from a stand-alone document defined in directory introduction/
 \chapter{Introduction to \sofa}
-\graphicspath{{introduction/}}  % to include images
-\input{introduction/introduction_body}
+\graphicspath{{../introduction/}}  % to include images
+\input{../introduction/introduction_body}
 
 % This chapter is borrowed from a stand-alone document defined in directory design/
 \chapter{Design}
-\graphicspath{{design/}}  % to include images
-\input{design/design_body}
+\graphicspath{{../design/}}  % to include images
+\input{../design/design_body}
 \chapter{Modules}
-\graphicspath{{modules/}}  % to include images
+\graphicspath{{../modules/}}  % to include images
 In this document we explain the usage and the fucntionalities of the modules developped using the Core Sofa Framework.
-\input{modules/modules_body}
+\input{../modules/modules_body}
 % This chapter is defined here
 \chapter{How to contribute to this documentation}
 \section{Document structure}
