r1777/sofa-dev : finished updating the documentation. FIX: Should now work on Windows also.

--- a/introduction/introduction_body.tex
+++ b/introduction/introduction_body.tex
@@ -342,11 +342,10 @@ The default collision manager of Sofa circumvents this problem by dynamically ga
 \section{Code of the examples}
 \subsection{The hybrid pendulum}\label{cpp:hybrid}
 This is the code of the example commented in section~\ref{sec:commentedExample} :
-\includecode{C++}{../applications/tutorials/mixedPendulum/Main.cpp}
+\includecode{C++}{../../applications/tutorials/mixedPendulum/Main.cpp}
 
 \subsection{A liver}\label{xml:liver}
-This is the XML code of the liver discussed in section~\ref{sec:multimodel} page~\pageref{bla:liver} :
-\includecode{XML}{../scenes/liver.scn}
+The XML code of the liver discussed in section~\ref{sec:multimodel} page~\pageref{bla:liver} is in \texttt{../scenes/liver.scn}
 
 % \include{sofaMechanical}
 %
