--- a/introduction/introduction.tex
+++ b/introduction/introduction.tex
@@ -1,5 +1,5 @@
 \documentclass[a4paper,11pt]{article}
-\input{macros_docu} % This file is in parent directory. Your TEXINPUTS environment variable must include .. to reach this file. Example: setenv TEXINPUTS ..:../..:${TEXINPUTS}
+\input{../macros_docu}
 
 % ---- format de page A4
 	\setlength{\textwidth }{16cm}	% largeur de ligne
@@ -13,7 +13,7 @@
 
 % Title Page
 \title{Introduction to \sofa}
-\author{The \sofa~team}
+\author{Fran\c{c}ois Faure}
 \date{2007}
 % \author{Fran\c{c}ois Faure\\ J\'er\'emie Allard\\ {\small INRIA Rh\^one-Alpes, Grenoble, France}}
 
