--- a/modules/modules_body.tex
+++ b/modules/modules_body.tex
@@ -1,3 +1,3 @@
-\input{modules/modules_collision}
-\input{modules/softArticulations}
-\input{modules/meshTopologies}
+\input{../modules/modules_collision}
+\input{../modules/softArticulations}
+\input{../modules/meshTopologies}
