r2476/sofa-dev : ADD: * documentation about the GUI.      * modified a bit the structure of modules: now different chapters are stored in different directories
 //partial sync (51/93 changes)//

--- a/modules/modules_body.tex
+++ b/modules/modules_body.tex
@@ -1,3 +1,4 @@
-\input{../modules/modules_collision}
-\input{../modules/softArticulations}
-\input{../modules/meshTopologies}
+\input{../modules/collision/modules_collision}
+\input{../modules/articulatedbodies/softArticulations}
+\input{../modules/topology/meshTopologies}
+\input{../modules/GUI/GUI}
