--- a/sofaDocumentation/sofadocumentation.tex
+++ b/sofaDocumentation/sofadocumentation.tex
@@ -38,7 +38,7 @@ Fran\c{c}ois Faure
 
 \chapter{Modules}
 \graphicspath{{../modules/}}  % to include images
-In this document we explain the usage and the fucntionalities of the modules developped using the Core Sofa Framework.
+In this document we explain the usage and the functionalities of the modules developped using the Core Sofa Framework.
 \input{../modules/modules_body}
 
 
