r2555/sofa-dev : DOC: add structure to the HowTo chapter
FIX: compilation due to some  misplacement of images

 //partial sync (12/18 changes)//

--- a/sofaDocumentation/sofadocumentation.tex
+++ b/sofaDocumentation/sofadocumentation.tex
@@ -41,6 +41,12 @@ Fran\c{c}ois Faure
 In this document we explain the usage and the functionalities of the modules developped using the Core Sofa Framework.
 \input{../modules/modules_body}
 
+\chapter{How To}
+\graphicspath{{../HowTo/}}  % to include images
+In this document we will try to give small tutorials on various topics you should encounter during your experience with SOFA.
+\input{../HowTo/howto_body}
+
+
 
 % This chapter is defined here
 \chapter{How to contribute to this documentation}
