--- a/modules/modules_body.tex
+++ b/modules/modules_body.tex
@@ -2,3 +2,4 @@
 \input{../modules/articulatedbodies/softArticulations}
 \input{../modules/topology/meshTopologies}
 \input{../modules/GUI/GUI}
+\input{../modules/rendering/rendering_light}
