r2723/sofa-dev : ADDED: documentation for articulated rigid bodies based on reduced coordinates

--- a/articulatedBodies/articulatedBodies.tex
+++ b/articulatedBodies/articulatedBodies.tex
@@ -28,6 +28,8 @@ For each kind of articulated body, it first explains quickly the concepts of the
 \tableofcontents
 \newpage
 \input{softArticulations}
+\newpage
+\input{hierarchyContainer}
 
 
 \end{document}          
