--- a/HowTo/forcefield.tex
+++ b/HowTo/forcefield.tex
@@ -6,7 +6,7 @@ The simplest way to implement your own ForceField is :
 \begin{enumerate}
  \item make it derive from sofa::core::componentmodel::behavior::ForceField
  \item implements the following virtual fonctions: addForce, getPotentialEnery. Others virtual functions exist like  addDForce, addDForceV (if you want to make dynamics), and you should read the doxigen documentation about ForceField. 
- \item as all the others component you might create, you have to add it to the project. Edit \$SOFA\_DIR/modules/sofa/component/component.pro, and add the path to new files in the section HEADERS and SOURCES.
+ \item as all the others component you might create, you have to add it to the project. \\Edit \$SOFA\_DIR/modules/sofa/component/component.pro, and add the path to new files in the section HEADERS and SOURCES.
  \item Edit \$SOFA\_DIR/modules/sofa/simulation/common/init.cpp and add your new forcefield to the list. This step is compulsory for Windows system, and does the linking of a new component to the factory. If you forget it, your component won't be created at initialization time.
 \end{enumerate}
 
