--- a/sofaDocumentation/sofadocumentation.tex
+++ b/sofaDocumentation/sofadocumentation.tex
@@ -33,6 +33,8 @@ Fran\c{c}ois Faure
 % This chapter is borrowed from a stand-alone document defined in directory design/
 \chapter{Design}
 \graphicspath{{../design/}}  % to include images
+\input{../design/mappings}
+\newpage
 \input{../design/design_body}
 
 
