r3018/sofa-dev : DOC: in front page, give the link to online documentation

--- a/modules/GUI/GUI.tex
+++ b/modules/GUI/GUI.tex
@@ -25,8 +25,9 @@ At any time, you can hide the control panel by moving its right border to the le
 	\centering
 		\includegraphics[width=0.45\textwidth]{GUI/GUI_basic.png}
 	\caption{Basic Controls}
-\end{figure}
-\vspace{25mm}
+\end{figure}\begin{center}
+
+\vspace{25mm}            \end{center}
 The basics controls are :
 \begin{itemize}
  \item {\bf Animate} : launch the simulation. The simulation won't stop until you press Animate.
@@ -255,7 +256,7 @@ A modeler for Sofa has been recently created. The purpose of this tool is to use
 
 \subsection{Library}
 The left part of the application displays a library of all the different components available in Sofa, sorted by the name of the Base Class. Clicking on any of them will display information about the usage, authors, licence if any, and sometimes a link to an example. This link will open a new tab in the modeler displaying a simulation. 
-At any time, you can launch Sofa from the Modeler, hitting CTRL+R, or going to File->Run In Sofa.
+At any time, you can launch Sofa from the Modeler, hitting CTRL+R, or going to File ... Run In Sofa.
 \subsection{Graph Editor}
 The right part seems very similar to the scene graph displayed in Sofa. The behavior is the same. Double clicking on a component will open a dialog, in which you can define all the parameters of the object. But, as you are in an editor, you can easily remove everything you have added. This editor is very convenient to test things. Try to create your object, launch into sofa, modify some components, or parameters, using the documentation displayed each time you select one item. \\
 To quickly test a simple scene, you can use the presets. You can build automatically a deformable object in a grid, or using a tetrahedric mesh, or rigid objects, that can be simulated, or not (floors, or walls are not simulated for instance).
