--- a/sofaDocumentation/sofadocumentation.tex
+++ b/sofaDocumentation/sofadocumentation.tex
@@ -9,8 +9,10 @@
 	\setlength{\topmargin}{0cm} 	
 
 % Title Page
-\title{Sofa Documentation}
+\title{Sofa Documentation\\
+\vspace{10mm}\normalsize{Also See \bf{http://www.sofa-framework.org/documentation} } }
 \author{The Sofa Team}
+
 
 
 
