r3037/sofa-dev : FIX: correct paths and names to example scenes

--- a/modules/articulatedbodies/softArticulations.tex
+++ b/modules/articulatedbodies/softArticulations.tex
@@ -64,7 +64,7 @@ A mapping performs the link between the two lists, to know which articulations b
 
 \subsubsection {Example}
 
-The example softArticulations.scn shows a basic pendulum :
+The example \texttt{../examples/Components/forcefield/JointSpringForceField.scn} shows a basic pendulum :
 
 \begin{verbatim}
 <Node>
@@ -183,7 +183,7 @@ The influence of the bones on each point of the external model is given by skinn
 		\centering
 		\includegraphics[width=0.50\textwidth]{articulatedbodies/skinning}
 		\includegraphics[width=0.30\textwidth]{articulatedbodies/skinnedPendulum}	
-	\caption{In the example "softArticulationsSkinned.scn" the external points compute their skinning weights from the 3 nearest DOFs}
+	\caption{In the example \texttt{../examples/Components/mapping/SkinningMapping.scn} the external points compute their skinning weights from the 3 nearest DOFs}
 \end{figure*}
 
 \begin{figure*}[htpb]
