--- a/sofaDocumentation/sofadocumentation.tex
+++ b/sofaDocumentation/sofadocumentation.tex
@@ -20,7 +20,7 @@
 \maketitle
 
 \begin{abstract}
-This is the Sofa documentation
+This is an introduction to SOFA. More documentation is available online.
 \end{abstract}
 
 \tableofcontents
